CC-1811 schedule view/add show screens make calendar height less than one screen size to prevent outer browser scrollbar.

--- a/public/css/add-show.css
+++ b/public/css/add-show.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 #schedule-add-show,
 #fullcalendar_show_display {
 	float: left;
